--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Page 2</h1>
     <p>This is page 2. Click <a href="index.html">here</a> to go back to page 1.</p>
-    <img src="DSC_0720.JPG" alt="Back">
+    <img src="DSC_0720.JPG" alt="Back" style="width:500px;height:600px;">
     <p>I techinally changed something...</p>
 </body>
 </html>
